# fnmhenhacks

./: Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  queries.md
backend/: pyproject.toml
backend/app/: __main__.py  data.py  errors.py
backend/app/blueprints/: __init__.py  api.py  files.py
data/: Delaware_Business_Licenses.csv  csv_to_json.py  delaware_buisiness.json  delaware_business.json
frontend/: .env  package-lock.json  package.json
frontend/public/: delaware.json  info.md  map.json
frontend/src/: App.js
frontend/src/Components/NavBar/: NavBar.css  NavBar.jsx
frontend/src/Components/Search/: Search.js  Search.jsx
frontend/src/Components/Search/Services/: Services.css  Services.jsx
frontend/src/Components/View/: View.js  View.jsx
frontend/src/Components/View/Card/: Card.css  Card.jsx
frontend/src/Pages/Home/: Home.css  Home.js  Home.jsx
frontend/src/Pages/Info/: Info.css  Info.jsx
